name of a player above board (little fix)